--- a/SBA3.1.html
+++ b/SBA3.1.html
@@ -9,5 +9,29 @@
 </head>
 <body>
     <h1>The Calculator</h1>
+    <div class="Calculator">
+        <div class="buttons">
+            <button class="clear">C</button>
+ <button class="Clear">C</button>
+ <button class="Division">/</button>
+ <button class="Multiplication">*</button>
+ <button class="Substraction">-</button>
+ <button class="Addition">+</button>
+ <button class="Equal">=</button>
+ <button class="number">0</button>
+ <button class="number">1</button>
+ <button class="number">2</button>
+ <button class="number">3</button>
+ <button class="number">4</button>
+ <button class="number">5</button>
+ <button class="number">6</button>
+ <button class="number">7</button>
+ <button class="number">8</button>
+ <button class="number">9</button>
+ <button class="Decimal">.</button>
+
+        </div>
+    </div>
 </body>
+
 </html>
