--- a/SBA3.1.html
+++ b/SBA3.1.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Big Calculator</title>
     <link rel="stylesheet" href="SBA3.css">
     <script defer src="SBA3.1.js"></script>
 </head>
+
 <body>
-    <h1>The Calculator</h1>
+    <h2>Calculator</h2>
     <div class="Calculator">
-        <div class="buttons">
-            <button class="clear">C</button>
- <button class="Clear">C</button>
- <button class="Division">/</button>
- <button class="Multiplication">*</button>
- <button class="Substraction">-</button>
- <button class="Addition">+</button>
- <button class="Equal">=</button>
- <button class="number">0</button>
- <button class="number">1</button>
- <button class="number">2</button>
- <button class="number">3</button>
- <button class="number">4</button>
- <button class="number">5</button>
- <button class="number">6</button>
- <button class="number">7</button>
- <button class="number">8</button>
- <button class="number">9</button>
- <button class="Decimal">.</button>
+        <input type="text" id="Output">
+        <div class="Calcbuttons">
+            <button class="Clear">C</button>
+            <button class="Division">/</button>
+            <button class="Multiplication">*</button>
+            <button class="Substraction">-</button>
+            <button class="Addition">+</button>
+            <button class="Equal">=</button>
+            <button class="number">0</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="Decimal">.</button>
 
         </div>
     </div>
