--- a/SBA3.1.html
+++ b/SBA3.1.html
@@ -15,21 +15,25 @@
         <input type="text" id="Output">
         <div class="Calcbuttons">
             <button class="Clear">C</button>
+            <button class="number">()</button>
+            <button class="number">%</button>
             <button class="Division">/</button>
             <button class="Multiplication">*</button>
             <button class="Substraction">-</button>
             <button class="Addition">+</button>
             <button class="Equal">=</button>
-            <button class="number">0</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
+            <button class="Multiplication">*</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="Substraction">-</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="PEMDAS">+/-</button>
             <button class="Decimal">.</button>
 
         </div>
