--- a/SBA3.1.html
+++ b/SBA3.1.html
@@ -17,10 +17,6 @@
             <button class="Clear">C</button>
             <button class="number">()</button>
             <button class="number">%</button>
-            <button class="Division">/</button>
-            <button class="Multiplication">*</button>
-            <button class="Substraction">-</button>
-            <button class="Addition">+</button>
             <button class="Equal">=</button>
             <button class="number">7</button>
             <button class="number">8</button>
@@ -33,7 +29,9 @@
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
+             <button class="Addition">+</button>
             <button class="PEMDAS">+/-</button>
+             <button class="number">0</button>
             <button class="Decimal">.</button>
 
         </div>
