--- a/Table3.1.html
+++ b/Table3.1.html
@@ -17,13 +17,13 @@
     </head>
     <body>
         <h2>Login</h2>
-        <div class="container"></div>
+        <div class="container">
         <form class="login-in">
-         <input required type="text"placeholder= "Username"/>
-         <input required type="text" placeholder="Password">
-         <input required type="Date" text= "Date of birth"> 
+         <input required type="text" placeholder="Password"> 
          <button class="Submit">Submit</button>
      </form>
+     </div>
+     <div id="clone"></div>
     </body>
     </html>
 </body>
