--- a/Table3.1.html
+++ b/Table3.1.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <!DOCTYPE html>
     <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,16 +18,21 @@
         <link rel="stylesheet" href="SBA3.css">
         <script defer src="SBA3.1.js"></script>
     </head>
+
     <body>
         <h2>Login</h2>
         <div class="container">
-        <form class="login-in">
-         <input required type="text" placeholder="Password"> 
-         <button class="Submit">Submit</button>
-     </form>
-     </div>
-     <div id="clone"></div>
+            <form class="form" onsubmit="return form()">
+                <label for="password">Password:</label>
+                <input required type="password" id="Password">
+                <button class="Submit">Submit</button>
+                <!-- <input type="submit" value="Submit"> -->
+            </form>
+        </div>
+        <div id="clone"></div>
     </body>
+
     </html>
 </body>
+
 </html>
